--- a/css/_elements.less
+++ b/css/_elements.less
@@ -524,24 +524,46 @@ hr {
 => buttons
 ========================================================================== */
 .button {
-  background: transparent;
   border: none;
+  display: block;
   outline: none;
-  border: 2px solid #000;
   border-radius: 50%;
-  color: #000;
-  // display: inline-block;
-  // width: fit-content;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  height: 91px;
-  line-height: 50px;
-  padding: 0 26px;
-  font-size: 24px;
   text-align: center;
   font-weight: 700;
+  position: relative;
+  height: 130px;
+  width: 240px;
+  transform: rotate(-5deg);
   .anim();
+  span {
+    border: 2px solid #000;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 130px;
+    border-radius: 50%;
+    line-height: 50px;
+    padding: 0 60px;
+    font-size: 24px;
+    background: #fff;
+    color: #000;
+    position: relative;
+    z-index: 2;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: var(--green);
+    z-index: 1;
+    top: 14px;
+    left: 0;
+    border-radius: 50%;
+  }
+  img {
+    margin-left: 12px;
+  }
 
   &.yellow {
     background: var(--yellow);
