--- a/css/_global.less
+++ b/css/_global.less
@@ -26,6 +26,13 @@ body {
 
 .main-container {
   padding-top: var(--header-height);
+  padding: var(--header-height) 56px 0;
+}
+.main-container-wrap {
+  background: #eec2fb;
+  border-right: 2px solid #000;
+  border-left: 2px solid #000;
+  overflow: hidden;
 }
 
 .comm-section {
@@ -357,4 +364,162 @@ header {
 .header-box {
   background: #ffffff;
   border: 2px solid #000000;
+}
+
+.hero-head {
+  position: relative;
+  z-index: 2;
+  h2 {
+    font-family: "w-bold";
+    font-style: normal;
+    font-size: 150px;
+    line-height: 160px;
+  }
+  p {
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 46px;
+    text-transform: uppercase;
+    color: #000000;
+  }
+}
+.home-btn {
+  margin-top: 8px;
+}
+
+.hero-wrap {
+  padding: 200px 0 200px;
+  overflow: hidden;
+  position: relative;
+}
+
+.white-outline {
+  color: #fff;
+  -webkit-text-stroke: 2px #000000;
+}
+
+.hero-img-wrap {
+  width: 55%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  transform: translateX(10%);
+}
+
+.work-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.work-bg {
+  position: absolute;
+  width: 3428px;
+  border-radius: 50%;
+  background-color: var(--blue);
+  height: 100%;
+  transform: translateY(-100px);
+}
+
+.work-container {
+  padding: 100px 0 450px;
+}
+
+.comm-head {
+  max-width: 1105px;
+  margin: auto;
+  position: relative;
+  text-align: center;
+  margin-bottom: 60px;
+  h2 {
+    font-family: "w-bold";
+    font-size: 80px;
+    line-height: 1.5;
+    text-transform: uppercase;
+  }
+  p {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 30px;
+  }
+}
+
+.work-txt-img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .txt-2 {
+    padding: 0 60px;
+    max-width: 1100px;
+    margin: auto;
+  }
+}
+.work-img {
+  flex-shrink: 0;
+  width: 173px;
+  height: 219px;
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+.txt-2 {
+  p {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+  }
+}
+
+.hero-section {
+  background-image: url(../img/hero-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  .container {
+    position: relative;
+    z-index: 1;
+  }
+}
+
+.learn-more {
+  display: flex;
+  justify-content: center;
+}
+
+.sticker {
+  position: absolute;
+}
+
+.hero-stickers {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+}
+
+.sticker-1 {
+  top: 20px;
+  right: -100px;
+}
+.sticker-2 {
+  top: 30%;
+  left: 47%;
+}
+.sticker-3 {
+  bottom: 10%;
+  left: -50px;
+}
+.sticker-4 {
+  top: 50%;
+  right: 80px;
 }
