--- a/css/_elements.less
+++ b/css/_elements.less
@@ -536,6 +536,7 @@ hr {
   transform: rotate(-5deg);
   .anim();
   span {
+    transition: 0.2s;
     border: 2px solid #000;
     display: inline-flex;
     align-items: center;
@@ -549,6 +550,7 @@ hr {
     color: #000;
     position: relative;
     z-index: 2;
+    cursor: pointer;
   }
   &::after {
     content: "";
@@ -582,8 +584,9 @@ hr {
   }
   &:hover {
     background: transparent;
-    color: #000;
-    border: 2px solid #000;
+    span {
+      transform: translate(0px, 14px);
+    }
   }
 }
 
@@ -1658,9 +1661,9 @@ label.error {
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+  // text-align: center;
+  // font-size: 18px;
+  // background: #fff;
 
   /* Center slide text vertically */
   display: -webkit-box;
