--- a/css/_elements.less
+++ b/css/_elements.less
@@ -541,10 +541,11 @@ hr {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    height: 130px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     line-height: 50px;
-    padding: 0 60px;
+    padding: 0 20px;
     font-size: 24px;
     background: #fff;
     color: #000;
@@ -565,6 +566,12 @@ hr {
   }
   img {
     margin-left: 12px;
+  }
+
+  &.blue {
+    &::after {
+      background: var(--d-blue);
+    }
   }
 
   &.yellow {
