--- a/css/_global.less
+++ b/css/_global.less
@@ -29,7 +29,7 @@ body {
   padding: var(--header-height) 56px 0;
 }
 .main-container-wrap {
-  background: #eec2fb;
+  // background: #eec2fb;
   border-right: 2px solid #000;
   border-left: 2px solid #000;
   overflow: hidden;
@@ -431,13 +431,13 @@ header {
 }
 
 .comm-head {
-  max-width: 1105px;
+  max-width: 1200px;
   margin: auto;
   position: relative;
   text-align: center;
   margin-bottom: 60px;
   h2 {
-    font-family: "w-bold";
+    font-family: "w-regular";
     font-size: 80px;
     line-height: 1.5;
     text-transform: uppercase;
@@ -702,7 +702,7 @@ header {
 }
 .industry-txt {
   background: #fff;
-  padding: 60px 40px;
+  padding: 60px 20px;
   transition: 0.5s;
   p {
     font-weight: 500;
@@ -710,5 +710,222 @@ header {
     line-height: 41px;
     text-align: center;
     color: #000000;
+  }
+}
+
+.step-box {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 50px;
+  padding: 50px 100px;
+  position: relative;
+  h4 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 30px;
+  }
+  p {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #000000;
+  }
+}
+
+.step-btn {
+  position: absolute;
+  top: -40px;
+  left: -40px;
+  .button {
+    height: 91px;
+    width: 187px;
+    &::after {
+      background: #000;
+    }
+    span {
+      background: var(--green);
+    }
+  }
+}
+
+.blog-box {
+  border: 2px solid #000000;
+  border-radius: 30px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 30px;
+  display: block;
+}
+
+.blog-img {
+  width: 100%;
+  img {
+    width: 100%;
+  }
+}
+
+.blog-txt {
+  background: #fff;
+  text-align: center;
+  padding: 16px;
+  border-top: 2px solid #000;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  p {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #000000;
+  }
+}
+
+.border-round {
+  border-radius: 161px;
+}
+
+.blog-head {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 30px;
+  padding: 80px;
+  text-align: center;
+  margin-bottom: 30px;
+  h6 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #000000;
+    margin-bottom: 24px;
+  }
+  h2 {
+    font-family: "w-semi";
+    font-size: 86px;
+    line-height: 86px;
+    text-align: center;
+    color: #000000;
+    max-width: 500px;
+    margin: auto;
+  }
+}
+
+.blog-boxes-wrap {
+  position: relative;
+}
+
+.blog-btn {
+  position: absolute;
+  right: -40px;
+  top: -40px;
+}
+
+.clients-wrap {
+  background: var(--green);
+  padding: 90px 0 180px;
+  border-bottom: 2px solid #000;
+}
+
+.clients-logo-box {
+  background: #ffffff;
+  border: 2px solid #000000;
+  height: 132px;
+  width: 300px;
+  border-radius: 20px;
+  padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+}
+
+.clients-logo-wrap {
+  .f-row {
+    justify-content: center;
+    row-gap: 80px;
+  }
+}
+
+.swiper-button-next-logo {
+  &::after {
+    content: url(../img/next-btn.svg);
+    cursor: pointer;
+  }
+}
+
+.swiper-button-prev-logo {
+  &::after {
+    content: url(../img/back-btn.svg);
+    cursor: pointer;
+  }
+}
+
+.swiper-logo-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  top: 50px;
+}
+
+.clients-wrap {
+  .container {
+    position: relative;
+  }
+}
+
+.clients-logo-swiper {
+  margin-top: 140px;
+}
+
+.industries-wrap {
+  background: #e5fcfc;
+  padding: 130px 0;
+}
+
+.industries-boxes {
+  .f-row {
+    row-gap: 30px;
+    justify-content: center;
+  }
+}
+
+.industry-btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 130px;
+}
+
+// .wave-wrap{
+//   he
+// }
+
+.wave-wrap {
+  height: 320px;
+  width: 150000px;
+  background: url(../img/wave.png) repeat-x;
+  animation: move_wave 120s linear infinite;
+  transform-origin: center bottom;
+}
+@keyframes move_wave {
+  0% {
+    transform: translateX(0) translateZ(0)
+      scaleY(1);
+  }
+  50% {
+    transform: translateX(-25%) translateZ(0)
+      scaleY(0.55);
+  }
+  100% {
+    transform: translateX(-50%) translateZ(0)
+      scaleY(1);
   }
 }
