--- a/css/_global.less
+++ b/css/_global.less
@@ -719,6 +719,11 @@ header {
   border-radius: 50px;
   padding: 50px 100px;
   position: relative;
+  max-width: 730px;
+  margin-bottom: 130px;
+  &:nth-of-type(odd) {
+    margin-left: auto;
+  }
   h4 {
     font-weight: 700;
     font-size: 32px;
@@ -728,6 +733,8 @@ header {
     margin-bottom: 30px;
   }
   p {
+    max-width: 500px;
+    margin: auto;
     font-weight: 500;
     font-size: 24px;
     line-height: 36px;
@@ -927,5 +934,229 @@ header {
   100% {
     transform: translateX(-50%) translateZ(0)
       scaleY(1);
+  }
+}
+
+.steps-container {
+  max-width: 1159px;
+  margin-top: 60px;
+  padding-top: 100px;
+  margin: auto;
+}
+.steps-wrap {
+  background: #eaa2ff;
+  padding-bottom: 130px;
+  .comm-head {
+    max-width: none;
+  }
+}
+
+.step-img {
+  position: absolute;
+  right: -20%;
+  top: 15%;
+}
+
+.steps-container {
+  position: relative;
+}
+
+.steps-bg {
+  position: absolute;
+  height: 100%;
+  width: 110%;
+  top: 0;
+}
+.about-wrap {
+  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.about-bg {
+  position: absolute;
+  background: #d8ff4f;
+  height: 100%;
+  width: 250%;
+  border-radius: 50%;
+  transform: scaleY(1.1);
+  border: 2px solid #000;
+}
+.about-container {
+  padding: 80px 0;
+}
+
+.about-txt {
+  margin-top: 60px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  h4 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 72px;
+    text-transform: uppercase;
+    color: #000000;
+    padding-left: 120px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    img {
+      position: absolute;
+      left: 0;
+    }
+  }
+  h6 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 72px;
+    text-transform: uppercase;
+    color: #000000;
+  }
+}
+
+.about-img {
+  height: 800px;
+  width: 100%;
+  position: relative;
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    object-position: bottom;
+  }
+}
+.about-box {
+  position: relative;
+  padding-top: 100px;
+}
+
+.about-box-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: scaleY(1.2) scaleX(1.3);
+  transform-origin: right center;
+}
+.about-box-bg-2 {
+  transform-origin: left center;
+}
+
+.about-btm-txt {
+  position: relative;
+  padding-top: 80px;
+  p {
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 36px;
+    color: #000000;
+    margin-bottom: 90px;
+  }
+
+  .about-btm-txt-1 {
+    max-width: 1064px;
+  }
+  .about-btm-txt-2 {
+    max-width: 1400px;
+    margin: auto;
+    margin-bottom: 90px;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 49px;
+    text-align: center;
+    color: #000000;
+  }
+  .about-btm-txt-3 {
+    max-width: 1064px;
+    margin-left: auto;
+    text-align: right;
+  }
+}
+
+.candidate-wrap {
+  background: var(--pink);
+  padding: 250px 0 120px;
+}
+
+.candidate-head {
+  .comm-head {
+    max-width: none;
+    h6 {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 32px;
+      line-height: 41px;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+    h2 {
+      color: #ffffff;
+      -webkit-text-stroke: 1px #000;
+    }
+    p {
+      color: #ffffff;
+    }
+  }
+}
+
+.rates-wrap {
+  background-color: #fff;
+  text-transform: uppercase;
+  overflow-x: hidden;
+  border-bottom: 2px solid #000;
+  padding: 40px 0;
+  .scrolling-rates {
+    display: flex;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    min-width: 100%;
+    .rates-message {
+      display: flex;
+      flex-shrink: 0;
+      align-items: center;
+      animation: slide-left 20s linear infinite;
+      p {
+        font-family: "w-regular";
+        font-weight: 400;
+        font-size: 64px;
+        line-height: 96px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #000000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .rate {
+        font-weight: 400;
+        font-size: 96px;
+        line-height: 96px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #f935ff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 40px;
+        margin-left: 40px;
+        -webkit-text-stroke: 1px #000000;
+        &::before {
+          content: url(../img/star-rates.svg);
+          margin-right: 40px;
+        }
+      }
+      @keyframes slide-left {
+        from {
+          -webkit-transform: translateX(0);
+          transform: translateX(0);
+        }
+        to {
+          -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+        }
+      }
+    }
   }
 }
