--- a/css/_global.less
+++ b/css/_global.less
@@ -1160,3 +1160,178 @@ header {
     }
   }
 }
+
+.candidate-form-box {
+  background: #ffffff;
+  border: 2px solid #000000;
+  border-radius: 60px;
+  display: flex;
+}
+
+.candidate-form,
+.candidate-form-txt {
+  width: 50%;
+}
+.candidate-form {
+  border-right: 1px solid #000;
+  padding: 150px 120px;
+}
+
+.profile-image-wrap {
+  width: 170px;
+  height: 170px;
+  position: relative;
+  margin-bottom: 80px;
+}
+
+#choose-file {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+}
+
+#choose-file + label {
+  font-family: sans-serif;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#choose-file + label img {
+  object-fit: contain;
+}
+
+#img-preview {
+  width: 100%;
+  height: 100%;
+  border-radius: 27px;
+  overflow: hidden;
+  background: rgba(217, 217, 217, 0.6);
+  padding: 12px;
+  border: 2px dashed #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#img-preview img {
+  // width: 100%;
+  // height: 100%;
+  object-fit: cover;
+  height: auto;
+  display: block;
+  object-position: top;
+}
+
+.upload-wrap {
+  h4 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #000000;
+    opacity: 0.4;
+    margin-bottom: 8px;
+  }
+  p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #000000;
+    margin-bottom: 36px;
+  }
+}
+
+.submit-btn {
+  width: 296px;
+  height: 77px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  background: none;
+  border: 1px solid #000000;
+  box-shadow: 8px 8px 0px #2252cc;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  color: #000000;
+}
+
+.candidate-form-txt {
+  text-align: center;
+  padding: 150px 130px;
+  h4 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+    margin-bottom: 100px;
+  }
+  p {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 41px;
+    text-align: center;
+    color: #000000;
+    margin-top: 40px;
+  }
+  img {
+    margin: auto;
+    margin-top: 80px;
+  }
+}
+
+.partner-wrap {
+  background: #e6fdfd;
+  padding: 160px 0 80px;
+}
+
+.partner-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  h3 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+    margin: auto;
+    margin-bottom: 80px;
+    max-width: 1153px;
+  }
+  .button {
+    width: 403px;
+    height: 154.62px;
+    transform: rotate(0);
+    span {
+      font-size: 28px;
+    }
+  }
+}
+
+.partner-img {
+  position: absolute;
+  top: -200px;
+  left: 0;
+  width: 24%;
+}
+
+.partner-wrap {
+  position: relative;
+}
