--- a/css/_elements.less
+++ b/css/_elements.less
@@ -154,6 +154,9 @@ li {
 .customMargin(mb-; 21);
 
 @media all and (max-width: 1440px) {
+  .grid(f-1440; 10);
+  .customWidth(w-1440-; 20);
+
   .w-1440-40 {
     width: 40%;
   }
