--- a/css/_global.less
+++ b/css/_global.less
@@ -828,6 +828,7 @@ header {
   position: absolute;
   right: -40px;
   top: -40px;
+  z-index: 1;
 }
 
 .clients-wrap {
@@ -921,6 +922,7 @@ header {
   background: url(../img/wave.png) repeat-x;
   animation: move_wave 120s linear infinite;
   transform-origin: center bottom;
+  background-size: contain;
 }
 @keyframes move_wave {
   0% {
@@ -1334,4 +1336,44 @@ header {
 
 .partner-wrap {
   position: relative;
+}
+
+.work-stickers {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+.sticker-work {
+  &-1 {
+    right: 10%;
+  }
+  &-2 {
+    right: 0;
+    top: 5%;
+  }
+  &-3 {
+    right: 0;
+    top: 5%;
+  }
+  &-4 {
+    right: 0;
+    top: 5%;
+  }
+  &-5 {
+    right: 0;
+    top: 5%;
+  }
+  &-6 {
+    right: 0;
+    top: 5%;
+  }
+}
+
+.footer-wrap {
+  background: #fff;
+  border: 2px solid #000;
+  padding: 78px 0;
 }
