--- a/happy-wp/wp-content/themes/happy/assets/css/_responsive.less
+++ b/happy-wp/wp-content/themes/happy/assets/css/_responsive.less
@@ -2,6 +2,9 @@
   .container {
     max-width: 1536px;
   }
+  .about-img {
+    height: 650px;
+  }
 }
 
 @media all and (max-width: 1600px) {
@@ -15,9 +18,57 @@
   .sticker {
     scale: 0.9;
   }
+  .hero-wrap {
+    padding: 150px 20px 150px;
+  }
+  .industry-img {
+    height: 280px;
+  }
+  .industry-txt {
+    background: #fff;
+    padding: 40px 16px;
+  }
+  .industry-txt p {
+    font-size: 26px;
+  }
+  .comm-head h2 {
+    font-size: 72px;
+  }
+  .about-img {
+    height: 600px;
+  }
+  .wave-wrap {
+    height: 260px;
+  }
+  .candidate-form-txt {
+    text-align: center;
+    padding: 100px 60px;
+  }
+  .candidate-form {
+    border-right: 1px solid #000;
+    padding: 100px 60px;
+  }
+  .header-list li a img {
+    margin-right: 8px;
+  }
+  .header-list li a {
+    font-size: 22px;
+  }
+  .header-btn {
+    .button span {
+      font-size: 22px;
+    }
+  }
+  .swiper-logo-nav {
+    top: 130px;
+  }
 }
 
 @media all and (max-width: 1440px) {
+  .industries-wrap {
+    padding: 130px 0;
+  }
+
   .container {
     max-width: 1280px;
   }
@@ -33,6 +84,60 @@
     padding: 120px 20px 120px;
     overflow: hidden;
     position: relative;
+  }
+  .blog-head h2 {
+    font-size: 72px;
+    line-height: 72px;
+  }
+  .blog-head {
+    padding: 60px;
+  }
+  .industry-img {
+    height: 350px;
+  }
+  .comm-head h2 {
+    font-size: 64px;
+    line-height: 64px;
+  }
+  .step-img {
+    scale: 0.7;
+    right: -15%;
+  }
+  .step-box {
+    background: #ffffff;
+    border: 2px solid #000000;
+    border-radius: 50px;
+    padding: 40px 80px;
+  }
+  .about-txt h4 {
+    font-size: 40px;
+    line-height: 58px;
+  }
+  .about-txt h6 {
+    font-size: 28px;
+    line-height: 58px;
+  }
+  .about-txt h4 img {
+    scale: 0.8;
+  }
+  .wave-wrap {
+    height: 200px;
+  }
+  .header-list li a {
+    font-size: 20px;
+  }
+  .logo {
+    width: 230px;
+  }
+  .header-btn {
+    .button span {
+      font-size: 20px;
+    }
+  }
+  .clients-logo-box {
+    height: 110px;
+    width: 240px;
+    margin: auto;
   }
 }
 
@@ -53,16 +158,93 @@
     font-size: 28px;
     line-height: 32px;
   }
-  .button span {
-    height: 110px;
-    padding: 0 40px;
-  }
   .button {
     height: 110px;
-    width: 210px;
+    width: 230px;
+  }
+  .client-content {
+    padding: 36px 20px;
+  }
+  .client-head {
+    padding: 30px 24px;
+  }
+  .client-head-txt {
+    font-weight: 500;
+    font-size: 26px;
+  }
+  .client-content p {
+    font-weight: 500;
+    font-size: 18px;
+  }
+  .client-box {
+    border: 2px solid #000000;
+    border-radius: 20px;
+  }
+  .stars-wrap img {
+    width: 24px;
+  }
+  .about-bg {
+    width: 300%;
+  }
+  .logo {
+    width: 220px;
+    margin-left: 24px;
+  }
+  .header-list li a {
+    font-size: 20px;
+  }
+  .header-btn {
+    .button span {
+      font-size: 20px;
+    }
+  }
+  .txt-2 p {
+    font-size: 40px;
+    line-height: 54px;
   }
 }
 
+@media all and (max-width: 1280px) {
+  .about-img {
+    height: 540px;
+  }
+  .blog-head h2 {
+    font-size: 64px;
+    line-height: 64px;
+  }
+  .header-list {
+    li {
+      display: none;
+    }
+  }
+  .menu-btn {
+    display: block;
+    width: 100px;
+    height: 50px;
+    margin-right: 16px;
+    cursor: pointer;
+  }
+  .mobile-menu .header-list li {
+    display: block;
+    height: auto;
+    margin-bottom: 40px;
+  }
+  .mobile-menu {
+    padding: 80px 16px;
+  }
+  .header-btn {
+    display: none;
+  }
+  .mobile-menu .header-btn {
+    display: block;
+  }
+  .header-list li {
+    border: 0;
+  }
+  .header-btn {
+    border: 0;
+  }
+}
 @media all and (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -72,6 +254,86 @@
   }
   .sticker {
     scale: 0.6;
+  }
+  .client-head {
+    padding: 20px;
+  }
+  .industry-img {
+    height: 260px;
+  }
+  .industry-txt p {
+    font-size: 22px;
+  }
+  .industry-hover-txt p {
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .comm-head h2 {
+    font-size: 58px;
+  }
+  .industries-wrap {
+    padding: 80px 0;
+  }
+  .comm-head p {
+    font-size: 22px;
+  }
+  .steps-bg {
+    width: 130%;
+  }
+  .about-img {
+    height: 450px;
+  }
+  .about-box {
+    position: relative;
+    padding-top: 60px;
+  }
+  .about-txt h4 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .wave-wrap {
+    height: 180px;
+  }
+  .blog-head h2 {
+    font-size: 54px;
+  }
+  .candidate-form,
+  .candidate-form-txt {
+    width: 100%;
+  }
+  .candidate-form-box {
+    flex-direction: column-reverse;
+  }
+  .clients-logo-box {
+    height: 80px;
+    width: 200px;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  .swiper-button-next-logo,
+  .swiper-button-prev-logo {
+    scale: 0.7;
+  }
+  .clients-wrap,
+  .industries-wrap {
+    padding: 80px 0;
+  }
+  .work-tag {
+    font-size: 18px;
+    min-width: 157px;
+  }
+  .candidate-form-txt h4 {
+    font-size: 36px;
+    line-height: 40px;
+    margin-bottom: 40px;
+  }
+  .candidate-form-txt p {
+    font-weight: 500;
+    font-size: 24px;
+  }
+  .candidate-form-txt {
+    padding: 80px 50px;
+    padding-bottom: 0;
   }
 }
 
@@ -85,6 +347,91 @@
   }
   .hero-img-wrap {
     width: 60%;
+  }
+  .client-stars {
+    flex-direction: column;
+  }
+  .client-head-txt {
+    margin-top: 16px;
+    margin-bottom: 0;
+  }
+  .step-box {
+    margin: auto;
+    margin-bottom: 80px;
+  }
+  .steps-bg {
+    width: 120%;
+  }
+  .steps-container {
+    padding: 0 40px;
+  }
+  .step-btn {
+    .button span {
+      height: 100px;
+      padding: 0 30px;
+    }
+  }
+  .step-btn {
+    position: absolute;
+    top: -60px;
+  }
+  .about-btm-txt p {
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 64px;
+  }
+  .about-btm-txt .about-btm-txt-2 {
+    max-width: 1400px;
+    margin: auto;
+    margin-bottom: 64px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 40px;
+  }
+  .about-box-bg {
+    width: 60%;
+    left: auto;
+    margin: auto;
+    transform: none;
+  }
+  .about-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .about-bg {
+    width: 400%;
+  }
+  .wave-wrap {
+    height: 150px;
+    animation: move_wave 200s linear infinite;
+  }
+  .blog-wrap {
+    background: var(--pink);
+    padding: 100px 0;
+  }
+  .work-container {
+    padding-top: 0px;
+  }
+  .work-tags {
+    display: none;
+  }
+  .txt-2 p {
+    font-size: 32px;
+    line-height: 36px;
+  }
+  .work-txt-img {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .partner-wrap {
+    padding: 80px 0;
+  }
+  .partner-box h3 {
+    font-size: 36px;
+    line-height: 48px;
+    margin-bottom: 40px;
   }
 }
 
@@ -100,17 +447,11 @@
     font-size: 20px;
   }
   .button span {
-    height: 100%;
-    padding: 0 30px;
     font-size: 20px;
   }
   .button {
     height: 90px;
-    width: 170px;
-  }
-  .button {
-    height: 90px;
-    width: 170px;
+    width: 190px;
   }
   .button img {
     margin-left: 8px;
@@ -121,6 +462,67 @@
   }
   .learn-more {
     scale: 0.6;
+  }
+  .comm-head h2 {
+    font-size: 48px;
+    line-height: 48px;
+  }
+  .industries-wrap {
+    padding: 60px 0;
+  }
+  .comm-head p {
+    font-size: 20px;
+  }
+  .step-box h4 {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 20px;
+  }
+  .step-box p {
+    max-width: 500px;
+    margin: auto;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .step-btn {
+    scale: 0.8;
+  }
+  .step-img {
+    scale: 0.5;
+    right: -20%;
+  }
+  .about-btm-txt p {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 48px;
+  }
+  .about-btm-txt .about-btm-txt-2 {
+    max-width: 1400px;
+    margin: auto;
+    margin-bottom: 48px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .about-bg {
+    width: 450%;
+  }
+  .clients-logo-box {
+    height: 70px;
+    width: 160px;
+    padding: 12px;
+  }
+  .clients-logo-wrap .f-row {
+    row-gap: 40px;
+  }
+  .partner-box h3 {
+    font-size: 32px;
+    line-height: 40px;
+    margin-bottom: 36px;
   }
 }
 
@@ -145,11 +547,64 @@
   .sticker {
     scale: 0.4;
   }
+  .client-content p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .client-content {
+    padding: 20px 20px 30px;
+  }
+  .client-head-txt {
+    font-size: 24px;
+  }
+  .industry-img {
+    height: auto;
+  }
+  .step-box {
+    background: #ffffff;
+    border: 2px solid #000000;
+    border-radius: 30px;
+    padding: 40px 40px;
+  }
+  .step-img {
+    scale: 0.5;
+    right: -30%;
+    top: -40%;
+  }
+  .about-bg {
+    width: 500%;
+  }
+  .wave-wrap {
+    height: 120px;
+    animation: move_wave 250s linear infinite;
+  }
+  .txt-2 p {
+    font-size: 28px;
+    line-height: 28px;
+  }
+  .work-client-wrap {
+    padding-bottom: 150px;
+  }
 }
 
 @media all and (max-width: 576px) {
   .main-container {
     padding: var(--header-height) 10px 0;
+  }
+  .comm-head h2 {
+    font-size: 44px;
+  }
+  .steps-container {
+    padding: 0 20px;
+  }
+  .about-bg {
+    width: 550%;
+  }
+  .work-txt-img .txt-2 {
+    padding: 0;
+  }
+  .partner-box h3 {
+    font-size: 26px;
   }
 }
 
@@ -163,10 +618,138 @@
   .sticker-1 {
     top: -80px;
   }
+  .comm-head h2 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .comm-head p {
+    font-size: 18px;
+    margin-top: 20px;
+  }
+  .comm-head {
+    margin-bottom: 30px;
+  }
+  .rates-wrap .scrolling-rates .rates-message p {
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .rates-wrap
+    .scrolling-rates
+    .rates-message
+    .rate {
+    font-size: 56px;
+    line-height: 56px;
+  }
+  .rates-wrap
+    .scrolling-rates
+    .rates-message
+    .rate::before {
+    content: url(../img/star-rates.svg);
+    margin-right: 20px;
+    scale: 0.8;
+  }
+  .rates-wrap {
+    padding: 20px 0;
+  }
+  .steps-container {
+    padding: 0 10px;
+  }
+  .step-box h4 {
+    font-size: 26px;
+  }
+  .step-box p {
+    font-size: 18px;
+  }
+  .step-btn {
+    scale: 0.7;
+  }
+  .about-bg {
+    width: 600%;
+  }
+  .blog-head h2 {
+    font-size: 44px;
+    line-height: 44px;
+  }
+  .clients-logo-wrap .f-row {
+    row-gap: 20px;
+  }
+  .clients-logo-box {
+    height: 60px;
+    width: 140px;
+  }
+  .swiper-button-next-logo,
+  .swiper-button-prev-logo {
+    scale: 0.5;
+  }
+  .clients-wrap,
+  .industries-wrap {
+    padding: 60px 0;
+  }
+  .txt-2 p {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  .work-client-wrap {
+    padding-bottom: 100px;
+  }
+  .blog-head h2 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+  .blog-head {
+    padding: 36px;
+  }
+  .blog-wrap {
+    padding: 100px 0 60px;
+  }
+  .partner-box h3 {
+    font-size: 22px;
+  }
+  .partner-wrap {
+    padding: 60px 0;
+  }
+  .partner-box .button {
+    width: 300px;
+    height: 120px;
+  }
+  .partner-box .button span {
+    font-size: 24px;
+  }
+  .candidate-form {
+    padding: 40px;
+  }
+  .candidate-form-txt {
+    padding: 40px;
+    padding-bottom: 0;
+  }
 }
 @media all and (max-width: 420px) {
   .hero-head h2 {
     font-size: 48px;
+  }
+  .comm-head h2 {
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .step-box p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .step-box {
+    padding: 40px 20px;
+  }
+  .step-img {
+    scale: 0.3;
+  }
+  .step-btn {
+    scale: 0.6;
+  }
+  .step-box {
+    border-radius: 20px;
+  }
+  .step-box h4 {
+    font-size: 24px;
+    margin-bottom: 16px;
   }
 }
 
@@ -177,10 +760,51 @@
   .hero-img-wrap {
     transform: translateX(0) translateY(-20px);
   }
+  .industry-txt {
+    background: #fff;
+    padding: 30px 16px;
+  }
+  .comm-head h2 {
+    font-size: 32px;
+    line-height: 32px;
+  }
+  .comm-head p {
+    font-size: 16px;
+    margin-top: 16px;
+  }
+  .industries-wrap,
+  .clients-wrap {
+    padding: 40px 0;
+  }
+  .wave-wrap {
+    height: 100px;
+    animation: move_wave 300s linear infinite;
+  }
+  .rates-wrap
+    .scrolling-rates
+    .rates-message
+    .rate {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+  .clients-logo-box {
+    height: 60px;
+    width: 120px;
+  }
+  .blog-wrap {
+    padding: 100px 0 40px;
+  }
+  .partner-wrap {
+    padding: 40px 0;
+  }
 }
 
 @media all and (max-width: 359px) {
   .hero-head h2 {
     font-size: 40px;
+  }
+  .comm-head h2 {
+    font-size: 30px;
+    line-height: 30px;
   }
 }
