--- a/happy-wp/wp-content/themes/happy/assets/css/_global.less
+++ b/happy-wp/wp-content/themes/happy/assets/css/_global.less
@@ -7,6 +7,7 @@ html,
 body {
   width: 100%;
   background-color: #e5fcfc;
+  scroll-behavior: smooth;
   // -webkit-touch-callout: none;
   // -webkit-user-select: none;
   // -khtml-user-select: none;
@@ -66,7 +67,7 @@ body {
 
 /* header */
 :root {
-  --menuWidth: 300px;
+  --menuWidth: 340px;
 }
 
 #header {
@@ -87,6 +88,7 @@ header {
   vertical-align: middle;
   width: 300px;
   margin-left: 46px;
+  padding-right: 16px;
 }
 
 .header-box {
@@ -266,13 +268,15 @@ header {
   height: 100%;
   z-index: 9999;
   padding: 0 20px;
+  border: 2px solid #000;
+  background: var(--blue);
   .anim(0.5s);
 
   .header-list {
     margin: 0;
     display: inline-block;
     width: 100%;
-    height: ~"calc(100vh - 90px)";
+    height: auto;
 
     li {
       padding: 0;
@@ -828,6 +832,7 @@ header {
   position: absolute;
   right: -40px;
   top: -40px;
+  z-index: 1;
 }
 
 .clients-wrap {
@@ -881,6 +886,7 @@ header {
   width: 100%;
   position: absolute;
   top: 50px;
+  padding-right: 26px;
 }
 
 .clients-wrap {
@@ -921,6 +927,7 @@ header {
   background: url(../img/wave.png) repeat-x;
   animation: move_wave 120s linear infinite;
   transform-origin: center bottom;
+  background-size: contain;
 }
 @keyframes move_wave {
   0% {
@@ -1297,6 +1304,7 @@ header {
 .partner-wrap {
   background: #e6fdfd;
   padding: 160px 0 80px;
+  border-top: 2px solid #000;
 }
 
 .partner-box {
@@ -1334,4 +1342,103 @@ header {
 
 .partner-wrap {
   position: relative;
+}
+
+.work-stickers {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+.sticker-work {
+  &-1 {
+    right: 10%;
+  }
+  &-2 {
+    right: 0;
+    top: 5%;
+  }
+  &-3 {
+    right: 0;
+    top: 5%;
+  }
+  &-4 {
+    right: 0;
+    top: 5%;
+  }
+  &-5 {
+    right: 0;
+    top: 5%;
+  }
+  &-6 {
+    right: 0;
+    top: 5%;
+  }
+}
+
+.footer-wrap {
+  background: #fff;
+  border: 2px solid #000;
+  padding: 78px 0;
+}
+
+.header-btn {
+  .button {
+    transform: rotate(0);
+    height: 91px;
+  }
+  .button::after {
+    display: none;
+  }
+}
+
+.header-list {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.logo {
+  flex: auto;
+}
+.header-list li {
+  padding: 7px 24px;
+  flex: auto;
+  border-left: 2px solid #000;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hdr-link {
+  position: relative;
+  top: calc(0 - var(--header-height));
+}
+
+.menu-btn {
+  display: none;
+}
+
+.cancel-btn {
+  span {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 4px;
+    background: #000;
+    rotate: 45deg;
+    &:last-child {
+      rotate: -45deg;
+      top: -4px;
+    }
+  }
+}
+
+.close-menu {
+  height: 40px;
+  width: 40px;
+  top: 40px;
 }
