--- a/happy-wp/wp-content/themes/happy/assets/css/_responsive.less
+++ b/happy-wp/wp-content/themes/happy/assets/css/_responsive.less
@@ -244,6 +244,9 @@
   .header-btn {
     border: 0;
   }
+  .logo {
+    flex: none;
+  }
 }
 @media all and (max-width: 1200px) {
   .container {
@@ -334,6 +337,19 @@
   .candidate-form-txt {
     padding: 80px 50px;
     padding-bottom: 0;
+  }
+
+  .work-sticker-3 {
+    top: -60px;
+  }
+  .work-sticker-4 {
+    top: 40px;
+    right: -10px;
+    z-index: 1;
+  }
+  .sticker {
+    top: -9%;
+    right: -14%;
   }
 }
 
@@ -433,6 +449,42 @@
     line-height: 48px;
     margin-bottom: 40px;
   }
+  .footer-left p {
+    font-size: 20px;
+  }
+  .privacy-wrap a {
+    font-size: 20px;
+  }
+  .contact-links .link a {
+    font-size: 18px;
+  }
+  .footer-wrap {
+    padding: 60px 0;
+  }
+  .privacy-wrap a {
+    padding-right: 16px;
+    margin-right: 16px;
+  }
+  .contact-links .link img {
+    margin-right: 14px;
+  }
+  .candidate-form {
+    padding: 60px;
+  }
+  .candidate-form-txt p {
+    font-size: 26px;
+    line-height: 1.5;
+    margin-top: 20px;
+  }
+  .candidate-form-txt img {
+    margin-top: 40px;
+  }
+  .work-sticker-3 {
+    top: -140px;
+  }
+  .work-sticker-4 {
+    display: none;
+  }
 }
 
 @media all and (max-width: 768px) {
@@ -524,6 +576,30 @@
     line-height: 40px;
     margin-bottom: 36px;
   }
+  .footer-left {
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .footer-left {
+    .logo {
+      display: none;
+    }
+  }
+  .contact-links {
+    margin-bottom: 24px;
+  }
+  .contact-links .link a {
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 24px;
+  }
+  .footer-left p {
+    margin-bottom: 24px;
+    text-align: left;
+  }
+  .about-box-bg {
+    width: 80%;
+  }
 }
 
 @media all and (max-width: 640px) {
@@ -585,6 +661,25 @@
   .work-client-wrap {
     padding-bottom: 150px;
   }
+  .candidate-form-txt p {
+    font-size: 22px;
+  }
+  .candidate-form-txt {
+    padding: 60px;
+    padding-bottom: 0;
+  }
+  .rates-wrap .scrolling-rates .rates-message p {
+    font-size: 48px;
+  }
+  .rates-wrap
+    .scrolling-rates
+    .rates-message
+    .rate {
+    font-size: 72px;
+  }
+  .industry-btn {
+    margin-top: 60px;
+  }
 }
 
 @media all and (max-width: 576px) {
@@ -605,6 +700,47 @@
   }
   .partner-box h3 {
     font-size: 26px;
+  }
+  .candidate-form-txt {
+    padding: 40px;
+    padding-bottom: 0;
+  }
+  .candidate-form-txt h4 {
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 30px;
+  }
+  .candidate-form {
+    padding: 40px;
+  }
+  .form-grp,
+  .form-textarea-group {
+    margin-bottom: 30px;
+  }
+  .form-field {
+    font-size: 20px;
+    padding: 20px 0;
+  }
+  .upload-wrap h4 {
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .logo {
+    flex: none;
+  }
+  :root {
+    --header-height: 76px;
+  }
+  .about-box-bg {
+    width: 100%;
+  }
+  .menu-btn {
+    display: block;
+    width: 60px;
+  }
+  .sticker {
+    top: -11%;
+    right: -40%;
   }
 }
 
@@ -664,7 +800,7 @@
     scale: 0.7;
   }
   .about-bg {
-    width: 600%;
+    width: 850%;
   }
   .blog-head h2 {
     font-size: 44px;
@@ -722,6 +858,72 @@
     padding: 40px;
     padding-bottom: 0;
   }
+  .contact-links .link a {
+    font-size: 16px;
+  }
+  .contact-links .link a {
+    margin-bottom: 20px;
+  }
+  .footer-left p {
+    font-size: 18px;
+  }
+  .privacy-wrap a {
+    font-size: 18px;
+  }
+  .candidate-form,
+  .candidate-form-txt {
+    padding: 30px;
+  }
+  .candidate-form-txt {
+    padding-bottom: 0px;
+  }
+  .candidate-form-box {
+    border-radius: 40px;
+  }
+  .candidate-form-txt h4 {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 16px;
+  }
+  .candidate-form-txt img {
+    margin-top: 20px;
+    scale: 0.5;
+  }
+  .candidate-wrap {
+    padding: 200px 0 60px;
+  }
+  .about-container {
+    padding: 0;
+  }
+  .about-box-bg {
+    width: 100%;
+  }
+  .about-txt h4 {
+    font-size: 24px;
+    line-height: 28px;
+    padding-left: 80px;
+  }
+  .about-txt h6 {
+    font-size: 22px;
+    line-height: 40px;
+  }
+  .about-txt h4 img {
+    scale: 0.5;
+  }
+  .about-img {
+    height: 340px;
+  }
+  .industry-btn {
+    margin-top: 60px;
+  }
+  .hero-img {
+    height: 360px;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+  }
 }
 @media all and (max-width: 420px) {
   .hero-head h2 {
@@ -750,6 +952,9 @@
   .step-box h4 {
     font-size: 24px;
     margin-bottom: 16px;
+  }
+  .contact-links .link img {
+    margin-right: 8px;
   }
 }
 
@@ -797,8 +1002,51 @@
   .partner-wrap {
     padding: 40px 0;
   }
+  .privacy-wrap a {
+    font-size: 16px;
+  }
+  .footer-left p {
+    font-size: 16px;
+  }
+  .footer-wrap {
+    padding: 40px 0;
+  }
+  .candidate-form,
+  .candidate-form-txt {
+    padding: 20px;
+  }
+  .candidate-form-txt {
+    padding-bottom: 0px;
+  }
+  .candidate-form-box {
+    border-radius: 30px;
+  }
+  .form-grp,
+  .form-textarea-group {
+    margin-bottom: 20px;
+  }
+  .candidate-form-txt p {
+    font-size: 18px;
+  }
+  .submit-btn {
+    width: 100%;
+    height: 67px;
+    font-size: 18px;
+  }
+  .blog-txt p {
+    font-size: 20px;
+  }
+  .candidate-sticker {
+    top: -12.7%;
+    right: -150px;
+  }
 }
 
+@media all and (max-width: 380px) {
+  .contact-links .link a {
+    font-size: 14px;
+  }
+}
 @media all and (max-width: 359px) {
   .hero-head h2 {
     font-size: 40px;
